--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,7 @@
         <!--Center Navigation Bar-->
         <nav>
             <ul>
-                <li> <a href="#">MAIN COURSE</a></li>
+                <li class="main-course"> <a href="#">MAIN COURSE</a></li>
                 <li><a href="#">APPETIZERS</a></li>
                 <li><a href="#">DESSSERTS</a></li>
                 <li><a href="#">DRINKS</a></li>
@@ -194,5 +194,6 @@
             }
         }
     </script>
+
 </body>
 </html>
