--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -70,6 +70,15 @@ input{
     background-color: #ECF3F5;
 }
 
+.account{
+    position: absolute;
+    right: 100px;
+    height: 50px;
+    width: auto;
+    display: flex;
+    align-items: center;
+}
+
 .side-bar{
     display: flex;
     flex-direction: column;
