--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -79,7 +79,7 @@ color:white;
 
 .order{
     height: 100vh;
-    width: 20%;
+    width: 22%;
     position: fixed;
     top:50px;
     right: 0;
@@ -87,6 +87,7 @@ color:white;
     border-left: solid gray;
     padding: 10px;
     border-left: solid 1px rgb(220, 215, 215);
+    z-index: 100;
 }
 .order h3{
     color: #2C3832;
@@ -103,7 +104,7 @@ color:white;
     position: relative;
     background-color: #EAF0F0;
     width: 100%;
-    height: 70px;
+    height: 85px;
     border-radius: 14px;
     margin: 10px auto;
 }
@@ -119,8 +120,8 @@ color:white;
     top: 50%;
     left: 10px;
     transform: translateY(-50%);
-    height: 50px;
-    width: 50px;
+    height: 60px;
+    width: 60px;
     border-radius: 5px;
 }
 
@@ -134,8 +135,9 @@ color:white;
 }
 
 .products{
-    width: 203px;
-    height: 214px;
+    width: 220px;
+    height: 220px;
+    line-height: 1;
     border-radius: 15px;
     background-color: #D8E6E9;
     margin: 10px;
@@ -145,7 +147,7 @@ color:white;
 }
 
 .products img{
-    height: 70%;
+    height: 65%;
     width: 100%;
     border-radius: 15px 15px 0 0;
     transition: 300ms;
@@ -395,5 +397,3 @@ color:white;
 .menu-tab ion-icon{
     color: #2E636E;
 }
-
-.
