--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -126,12 +126,26 @@ color:white;
 }
 
 .order-label{
+    font-size: 15px;
+    font-weight: 500;
+    /* text-transform: uppercase; */
+    display: inline-block;
     font-family: 'Quicksand';
     position: absolute;
-    left: 70px;
-    top: 50%;
-    transform: translateY(-50%);
+    left: 30%;
+    top: 5px;
     background-color: inherit;
+    width: 40%;
+    height: 40px;
+    /* border: solid 1px; */
+}
+
+.order-price{
+    font-size: 30px;
+    font-weight: 600;
+    position: absolute;
+    bottom: 5px;
+    left: 50px;
 }
 
 .products{
