--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -109,6 +109,17 @@ color:white;
     margin: 10px auto;
 }
 
+.order-label{
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    /* border: solid; */
+    width: 40%;
+    height: 60px;
+    left: 75px;
+    top: 10px;
+}
+
 .order-child{
     height: 40vh;
     overflow: hidden;
@@ -125,17 +136,17 @@ color:white;
     border-radius: 5px;
 }
 
-.order-label{
+.order-item-name{
     font-size: 15px;
     font-weight: 500;
     /* text-transform: uppercase; */
     display: inline-block;
     font-family: 'Quicksand';
-    position: absolute;
-    left: 30%;
-    top: 5px;
+    /* position: absolute;
+    left: 0;
+    top: 0; */
     background-color: inherit;
-    width: 40%;
+    width: 100%;
     height: 40px;
     /* border: solid 1px; */
 }
@@ -143,9 +154,9 @@ color:white;
 .order-price{
     font-size: 30px;
     font-weight: 600;
-    position: absolute;
-    bottom: 5px;
-    left: 50px;
+    /* position: absolute;
+    bottom: 0;
+    left: 0; */
 }
 
 .products{
