--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -104,7 +104,7 @@ color:white;
     position: relative;
     background-color: #EAF0F0;
     width: 100%;
-    height: 85px;
+    height: 95px;
     border-radius: 14px;
     margin: 10px auto;
 }
@@ -116,7 +116,7 @@ color:white;
     /* border: solid; */
     width: 40%;
     height: 60px;
-    left: 75px;
+    left: 78px;
     top: 10px;
 }
 
@@ -157,6 +157,16 @@ color:white;
     /* position: absolute;
     bottom: 0;
     left: 0; */
+}
+
+.qty-box{
+    /* border: solid; */
+    width: 30%;
+    position: absolute;
+    top: 0;
+    right: 0;
+    text-align: center;
+    margin-top: 10px;
 }
 
 .products{
